--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ramlal 1.O</title>
+    <title>Paimon 1.O</title>
     <link rel="shortcut icon" href="./src/assets/logo.png" >
   </head>
   <body>
